Implement Website Features Home's Section

--- a/index/index.html
+++ b/index/index.html
@@ -106,7 +106,34 @@
       
     </section>
 
+    <section  id="features">
+        <h1>Features</h1>
+        <div class="cards">
+            <div class="card">
+                <img src="https://community.softr.io/uploads/db9110/original/2X/7/74e6e7e382d0ff5d7773ca9a87e6f6f8817a68a6.jpeg" alt="">
+                <h3><a href="">Interactive Courses</a></h3>
+                <p></p>
+            </div>
 
+            <div class="card">
+                <img src="https://community.softr.io/uploads/db9110/original/2X/7/74e6e7e382d0ff5d7773ca9a87e6f6f8817a68a6.jpeg" alt="">
+                <h3><a href="">Video Lecture</a></h3>
+                <p></p>
+            </div>
+
+            <div class="card">
+                <img src="https://community.softr.io/uploads/db9110/original/2X/7/74e6e7e382d0ff5d7773ca9a87e6f6f8817a68a6.jpeg" alt="">
+                <h3><a href="">Flexible Learning </a></h3>
+                <p></p>
+            </div>
+
+            <div class="card">
+                <img src="https://community.softr.io/uploads/db9110/original/2X/7/74e6e7e382d0ff5d7773ca9a87e6f6f8817a68a6.jpeg" alt="">
+                <h3><a href="">Affordable Education</a></h3>
+                <p></p>
+            </div>
+        </div>
+    </section>
 
     <script src="../script.js"></script>
     <script src="index.js"></script>
