Added Newsletter Signup

--- a/index/index.html
+++ b/index/index.html
@@ -135,6 +135,21 @@
         </div>
     </section>
 
+    <section  id="newsletter">
+
+        <div class="newtext">
+            <h2>Stay Updated with the Latest Insights</h2>
+            <p>Subscribe to empower your tech journey with knowledge
+                delivered straight to your inbox.</p>
+        </div>
+
+        <form class="form">
+            <input type="text" required>
+            <button>Sign Up</button>
+        </form>
+        
+    </section>
+
     <script src="../script.js"></script>
     <script src="index.js"></script>
 
