Added Course Search Bar

--- a/courses/courses.html
+++ b/courses/courses.html
@@ -32,6 +32,13 @@
 
     </section>
 
+    <section id="search">
+        <form action="">
+            <input  type="text" placeholder="Find Your Course" >
+            <i id="search-button" class="fa fa-search"></i>
+        </form>
+    </section>
+
 
     <script src="../script.js"></script>
     <script src="courses.js"></script>
