--- a/courses/courses.html
+++ b/courses/courses.html
@@ -13,7 +13,7 @@
     
     <section id="navbar">
 
-        <h1><a href="">Lustra</a></h1>
+        <h1><a href="../index/index.html">Lustra</a></h1>
 
         <nav>
             <ul>
@@ -37,6 +37,58 @@
             <input  type="text" placeholder="Find Your Course" >
             <i id="search-button" class="fa fa-search"></i>
         </form>
+    </section>
+
+    <section id="courses-layout">
+ 
+        <a class="card" href="">
+
+            <h4>Introduction to Computer & Internet</h4>
+            <p>General IT</p>
+            <p>10 lessons</p>
+
+        </a>
+ 
+        <a class="card" href="">
+
+            <h4>HTML & CSS Basics</h4>
+            <p>Front-End Development</p>
+            <p>10 lessons</p>
+
+        </a>
+ 
+        <a class="card" href="">
+
+            <h4>JavaScript Fundamentals</h4>
+            <p>Front-End Development</p>
+            <p>10 lessons</p>
+
+        </a>
+ 
+        <a class="card" href="">
+
+            <h4>React.js</h4>
+            <p>Front-End Development</p>
+            <p>10 lessons</p>
+
+        </a>
+ 
+        <a class="card" href="">
+
+            <h4>Django Framework</h4>
+            <p>Back-End Development</p>
+            <p>10 lessons</p>
+
+        </a>
+ 
+        <a class="card" href="">
+
+            <h4>Git & GitHub</h4>
+            <p>Software Development</p>
+            <p>10 lessons</p>
+
+        </a>
+            
     </section>
 
 
