Added Blogs Categories

--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -32,6 +32,14 @@
 
     </section>
 
+    <section id="blogs-categories">
+        <ul>
+            <li><a href="">AI Generative</a></li>
+            <li><a href="">Data Science</a></li>
+            <li><a href="">Block-Chain</a></li>
+            <li><a href="">Development Stack</a></li>
+        </ul>
+    </section>
 
     <script src="../script.js"></script>
     <script src="blogs.js"></script>
