--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -102,7 +102,7 @@
 
     <section id="all-blogs">
 
-        <h2>All Article</h2>
+        <h2>All Blogs</h2>
 
         <div id="blogs-cards">
 
@@ -165,7 +165,7 @@
 
     </section>
 
-    
+
 
     <script src="../script.js"></script>
     <script src="blogs.js"></script>
