Added Newsletter section

--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -165,6 +165,19 @@
 
     </section>
 
+    <section  id="newsletter">
+
+        <div class="newtext">
+            <h2>Join Our Tech Community!</h2>
+            <p>Stay ahead with the latest trends, tips, and insights. Subscribe now to receive exclusive content straight to your inbox..</p>
+        </div>
+
+        <form class="form">
+            <input type="text" required>
+            <button>Sign Up</button>
+        </form>
+
+    </section>
 
 
     <script src="../script.js"></script>
