--- a/subscription/Login/login.html
+++ b/subscription/Login/login.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" >
     <title>Lustra</title>
-    <link rel="stylesheet" href="subscription.css">
+    <link rel="stylesheet" href="login.css">
     <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
     
     <section id="navbar">
 
-        <h1><a href="">Lustra</a></h1>
+        <h1><a href="../../../index/index.html">Lustra</a></h1>
 
         <nav>
             <ul>
@@ -34,6 +34,6 @@
 
 
     <script src="../../script.js"></script>
-    <script src="subscription.js"></script>
+    <script src="login.js"></script>
 </body>
 </html>
