--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -13,7 +13,7 @@
     
     <section id="navbar">
 
-        <h1><a href="">Lustra</a></h1>
+        <h1><a href="../index/index.html">Lustra</a></h1>
 
         <nav>
             <ul>
@@ -28,7 +28,7 @@
 
         </nav>
 
-        <a class="subscription" href="../subscription/subscription.html">Login</a>
+        <a class="subscription" href="../subscription/Login/login.html">Login</a>
 
     </section>
 
