--- a/courses/lessons/lessons.html
+++ b/courses/lessons/lessons.html
@@ -28,7 +28,7 @@
 
         </nav>
 
-        <a class="subscription" href="../subscription/Login/login.html">Login</a>
+        <a class="subscription" href="../../subscription/Login/login.html">Log in</a>
 
     </section>
 
@@ -37,6 +37,7 @@
         <side id="lesson-list">
 
             <h2>Course Title</h2>
+            
             <div class="">
                 <a href=""><h4>lesson</h4></a>
                 <a href=""><h4>lesson</h4></a>
