--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -21,7 +21,7 @@
                     <a href="../courses/courses.html">Courses</a>
                     <a class="active" href="blogs.html">Blogs</a>
                     <a href="../about/about.html">About</a>
-                    <a href="../contactus/contactus.html">Contact US</a>
+                    <a href="../contactus/contactus.html">Contact us</a>
                 </li>
             </ul>
 
