--- a/contactus/contactus.html
+++ b/contactus/contactus.html
@@ -21,13 +21,13 @@
                     <a href="../courses/courses.html">Courses</a>
                     <a href="../blogs/blogs.html">Blogs</a>
                     <a href="../about/about.html">About</a>
-                    <a class="active" href="contactus.html">Contact US</a>
+                    <a class="active" href="contactus.html">Contact us</a>
                 </li>
             </ul>
 
         </nav>
 
-        <a class="subscription" href="../subscription/subscription.html">Login</a>
+        <a class="subscription" href="../subscription/subscription.html">Log in</a>
 
     </section>
 
