--- a/subscription/Login/login.html
+++ b/subscription/Login/login.html
@@ -22,12 +22,12 @@
                     <a href="../../../courses/courses.html">Courses</a>
                     <a href="../../../blogs/blogs.html">Blogs</a>
                     <a href="../../../about/about.html">About</a>
-                    <a href="../../../contactus/contactus.html">Contact US</a>
+                    <a href="../../../contactus/contactus.html">Contact us</a>
                 </li>
             </ul>
         </nav>
 
-        <a class="subscription active" href="login.html">Login</a>
+        <a class="subscription active" href="login.html">Log in</a>
 
     </section>
 
