Home & Courses functionalies

--- a/index/index.html
+++ b/index/index.html
@@ -38,7 +38,7 @@
         <h1>DIGITAL <br>DEVELOPMENT</h1>
         <h3>Master the skills, Build the future!</h3>
 
-        <button>Get Started</button>
+        <a class="class-to-action" href="../subscription/Login/login.html">Get Started</a>
         
     </section>
 
@@ -111,25 +111,25 @@
         <h1>Features</h1>
         <div class="cards">
             <div class="card">
-                <img src="https://community.softr.io/uploads/db9110/original/2X/7/74e6e7e382d0ff5d7773ca9a87e6f6f8817a68a6.jpeg" alt="">
+                <img src="assets/images/interactiveIllustrator.jpg" alt="">
                 <h3><a href="">Interactive Courses</a></h3>
                 <p></p>
             </div>
 
             <div class="card">
-                <img src="https://community.softr.io/uploads/db9110/original/2X/7/74e6e7e382d0ff5d7773ca9a87e6f6f8817a68a6.jpeg" alt="">
+                <img src="assets/images/videoIllustrator.jpg" alt="">
                 <h3><a href="">Video Lecture</a></h3>
                 <p></p>
             </div>
 
             <div class="card">
-                <img src="https://community.softr.io/uploads/db9110/original/2X/7/74e6e7e382d0ff5d7773ca9a87e6f6f8817a68a6.jpeg" alt="">
+                <img src="assets/images/resourceIllustrator.jpg" alt="">
                 <h3><a href="">Flexible Learning </a></h3>
                 <p></p>
             </div>
 
             <div class="card">
-                <img src="https://community.softr.io/uploads/db9110/original/2X/7/74e6e7e382d0ff5d7773ca9a87e6f6f8817a68a6.jpeg" alt="">
+                <img src="assets/images/communitiesIllustrator.jpg" alt="">
                 <h3><a href="">Affordable Education</a></h3>
                 <p></p>
             </div>
@@ -145,8 +145,8 @@
         </div>
 
         <form class="form">
-            <input type="text" required>
-            <button>Sign Up</button>
+            <input type="email" id="email" required>
+            <button type="submit">Sign Up</button>
         </form>
 
     </section>
@@ -157,18 +157,18 @@
             <h1>Lustra</h1>
             <div class="col">
                 <h4>About</h4>
-                <a href="">About Us</a>            
-                <a href="">Privage Policy</a>            
-                <a href="">Terms & Conditions</a>            
-                <a href="">Contact Us</a>  
+                <a href="../about\about.html">About Us</a>            
+                <a href="../standards/private-policy.html">Private Policy</a>            
+                <a href="../standards/terms&conditions.html">Terms & Conditions</a>            
+                <a href="../contactus/contactus.html">Contact Us</a>  
             </div>
 
             <div class="col">
                 <h4>My Account</h4>
-                    <a href="">Sign In</a>
-                    <a href="">My Courses</a>
-                    <a href="">Track Learning</a>
-                    <a href="">Help</a>
+                    <a href="../subscription/Login/login.html">Sign In</a>
+                    <a href="../subscription/Login/login.html">My Courses</a>
+                    <a href="../subscription/Login/login.html">Track Learning</a>
+                    <a href="../blogs/blogs.html">Bolgs</a>
 
             </div>
 
